force-app/main/default/objects/Credits_and_Booking__c/Credits_and_Booking__c.object-meta.xml
<CustomObject>
    <label>Credits and Booking</label>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>Credits and Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credits and Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>