force-app/main/default/objects/Credits_and_Booking__c/fields/Auto_OEMSalesChannel__c.field-meta.xml
<CustomField>
    <fullName>Auto_OEMSalesChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto OEM Sales Channel</label>
    <type>Checkbox</type>
</CustomField>