force-app/main/default/objects/Credits_and_Booking__c/fields/Brand_from_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_from_Quote__c</fullName>
    <description>This pulls Brand from Quote</description>
    <formula>Quote__r.Brand__c</formula>
    <inlineHelpText>This is Brand from Quote</inlineHelpText>
    <label>Brand from Quote</label>
    <type>Text</type>
</CustomField>