force-app/main/default/objects/Credits_and_Booking__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Flow Lab Testing</fullName>
            </value>
            <value>
                <fullName>Processing Charge</fullName>
            </value>
            <value>
                <fullName>Redball Fee</fullName>
            </value>
            <value>
                <fullName>Restock Fee</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>