force-app/main/default/objects/Credits_and_Booking__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This is to add additional Comments about manually added Credits and Bookings</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>