force-app/main/default/objects/Credits_and_Booking__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Created Date Manual</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>