force-app/main/default/objects/Credits_and_Booking__c/fields/Goals_Performance__c.field-meta.xml
<CustomField>
    <fullName>Goals_Performance__c</fullName>
    <label>Goals &amp; Performance</label>
    <referenceTo>Goals_Performance__c</referenceTo>
    <relationshipLabel>Credits and Bookings</relationshipLabel>
    <relationshipName>Credits_and_Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>