force-app/main/default/objects/Credits_and_Booking__c/fields/Partner_Org_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Partner_Org_from_Opportunity__c</fullName>
    <description>This is just the Name of the Account</description>
    <formula>Quote__r.Sold_By_Rep__r.Name</formula>
    <inlineHelpText>Account Name of Sold By Rep (Account)</inlineHelpText>
    <label>Partner Org from Opportunity</label>
    <type>Text</type>
</CustomField>