force-app/main/default/objects/Credits_and_Booking__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <formula>IF( Quote__r.SBQQ__Primary__c, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Primary</label>
    <type>Text</type>
</CustomField>