force-app/main/default/objects/Credits_and_Booking__c/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <formula>Quote__r.SBQQ__Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Quote</label>
    <type>Checkbox</type>
</CustomField>